adding an image button from mkyoug tutorial.  Modified a bit to see how to create the handler that is NOT inline like the first tutorial.

--- a/FirstApp/res/layout/main.xml
+++ b/FirstApp/res/layout/main.xml
@@ -13,6 +13,12 @@
 		android:id="@+id/button_01"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/btn_string"
+		android:text="@string/btn_string" />
+		
+	<ImageButton
+		android:id="@+id/image_button_01"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:src="@drawable/android_button"
 		/>
 </LinearLayout>
