--- a/FirstApp/res/layout/main.xml
+++ b/FirstApp/res/layout/main.xml
@@ -14,7 +14,11 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="@string/btn_string" />
-		
+	<Button 
+	    android:id="@+id/button_02"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:text="@string/new_button" />
 	<ImageButton
 		android:id="@+id/image_button_01"
 		android:layout_width="wrap_content"
