--- a/FirstApp/res/layout/main.xml
+++ b/FirstApp/res/layout/main.xml
@@ -13,14 +13,16 @@
 		android:id="@+id/button_01"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/btn_string" />
+		android:text="@string/button_01" 
+		/>
 	<Button 
 	    android:id="@+id/button_02"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:text="@string/new_button" />
+	    android:text="@string/button_02"
+		android:onClick="sendMessage" />
 	<ImageButton
-		android:id="@+id/image_button_01"
+		android:id="@+id/image_button_03"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:src="@drawable/android_button"
