--- a/FirstApp/res/layout/second.xml
+++ b/FirstApp/res/layout/second.xml
@@ -5,7 +5,7 @@
 
     <EditText
 		android:id="@+id/act_02_et"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 		<requestFocus />
 	</EditText>
