--- a/FirstApp/res/layout/second.xml
+++ b/FirstApp/res/layout/second.xml
@@ -10,4 +10,27 @@
 		<requestFocus />
 	</EditText>
 	
+	<CheckBox
+		android:id="@+id/chkIos"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/chk_ios" />
+	<CheckBox
+		android:id="@+id/chkAndroid"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/chk_android"
+		android:checked="true" />
+	<CheckBox
+		android:id="@+id/chkWindows"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/chk_windows" />
+	
+	<Button
+		android:id="@+id/btnDisplay"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/btn_display" />
+
 </LinearLayout>
