--- a/FirstApp/res/layout/second.xml
+++ b/FirstApp/res/layout/second.xml
@@ -5,10 +5,8 @@
 
     <EditText
 		android:id="@+id/act_02_et"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-		<requestFocus />
-	</EditText>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"  />
 	
 	<CheckBox
 		android:id="@+id/chkIos"
