--- a/FirstApp/res/layout/third.xml
+++ b/FirstApp/res/layout/third.xml
@@ -3,5 +3,11 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+	<TextView
+		android:id="@+id/third_text"
+		android:text="@string/third_radio"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		/>
 	
 </LinearLayout>
