--- a/FirstApp/res/layout/third.xml
+++ b/FirstApp/res/layout/third.xml
@@ -44,6 +44,13 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 	/>
+
+	<Button
+		android:id="@+id/play_audio_button"
+		android:text="@string/play_audio"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+	/>
 	
 	<ToggleButton
 		android:id="@+id/thirdActToggleButton"
