Trying to add storage class Audio_Data.  It can import but when I go to use .get() method it blows up.  I need to look at that method more closely and study up on HashMap

--- a/FirstApp/res/layout/third.xml
+++ b/FirstApp/res/layout/third.xml
@@ -45,12 +45,19 @@
 		android:layout_height="wrap_content"
 	/>
 
-	<Button
-		android:id="@+id/play_audio_button"
-		android:text="@string/play_audio"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-	/>
+		<Button
+			android:id="@+id/play_letter_a"
+			android:text="@string/btn_a"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+		/>
+		
+		<Button
+			android:id="@+id/play_letter_b"
+			android:text="@string/btn_b"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+		/>
 	
 	<ToggleButton
 		android:id="@+id/thirdActToggleButton"
