--- a/FirstApp/res/layout/third.xml
+++ b/FirstApp/res/layout/third.xml
@@ -4,6 +4,12 @@
     android:orientation="vertical" >
 
 	<TextView
+		android:id="@+id/log"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+	/>
+	
+	<TextView
 		android:id="@+id/third_text"
 		android:text="@string/third_radio"
 		android:layout_width="wrap_content"
