Added to the second activity a spinner ( listctrl ) that has countries listed.  Added a custom listener too.

--- a/FirstApp/res/layout/second.xml
+++ b/FirstApp/res/layout/second.xml
@@ -31,4 +31,26 @@
 		android:layout_height="wrap_content"
 		android:text="@string/btn_display" />
 
+	<Spinner
+		android:id="@+id/spinCountry"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:entries="@array/country_array"
+		android:prompt="@string/country_prompt"
+		/>
+	
+	<Spinner
+		android:id="@+id/spinner2"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		/>
+	
+	<Button
+		android:id="@+id/btnSubmit"
+		android:layout_height="wrap_content"
+		android:layout_width="wrap_content"
+		android:text="Submit"
+		/>
+		
+	
 </LinearLayout>
