--- a/FirstApp/res/layout/main.xml
+++ b/FirstApp/res/layout/main.xml
@@ -34,5 +34,12 @@
 		android:layout_height="wrap_content"
 		android:text="@string/third_act_button"
 		/>
-		
+
+	<Button
+		android:id="@+id/progres_act"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/prog_act_button_string"
+		/>
+	
 </LinearLayout>
