--- a/FirstApp/res/layout/main.xml
+++ b/FirstApp/res/layout/main.xml
@@ -40,6 +40,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="@string/prog_act_button_string"
-		/>
+		android:onClick="go_to_prog_activity"
+	/>
 	
 </LinearLayout>
