--- a/FirstApp/res/layout/progress.xml
+++ b/FirstApp/res/layout/progress.xml
@@ -5,8 +5,10 @@
 
 	<Button
 		android:id="@+id/btn_progress"
+		android:text="@string/prog_act_button_string"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/btn_progress"
     />
+
+
 </LinearLayout>
