--- a/FirstApp/res/layout/popup_dialog.xml
+++ b/FirstApp/res/layout/popup_dialog.xml
@@ -12,10 +12,9 @@
 	
 	<TextView
 		android:id="@+id/popup_text"
-		android:layout_width="wrap_content"
+		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:textColor="#FFF"
-		android:layout_toRightOf="@+id/poput_image"
+		android:layout_toRightOf="@+id/popup_image"
 		/>
 	
 	<Button
