--- a/FirstApp/res/layout/progress.xml
+++ b/FirstApp/res/layout/progress.xml
@@ -10,5 +10,12 @@
 		android:layout_height="wrap_content"
     />
 
+	<Button
+		android:id="@+id/btn_pringlog"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/prog_print_log"
+		/>
+
 
 </LinearLayout>
