Replaced Text_View with Log_View.  Also update the Log_Data to return a List of strings and pushed that data into the Log_Viewer activity when activity starts.  I think maybe a clear button... we'll see.

--- a/FirstApp/res/layout/log_viewer.xml
+++ b/FirstApp/res/layout/log_viewer.xml
@@ -3,11 +3,19 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-	
+
+	<com.mycompany.firstapp.Log_View
+		android:id="@+id/log_viewer_text"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:maxLines="30"
+		android:scrollbars="vertical"		
+	/>
+	<!-- Removing the text view
 	<TextView
 		android:id="@+id/log_viewer_text"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"		
 	/>
-
+	-->
 </LinearLayout>
