--- a/FirstApp/res/layout/main.xml
+++ b/FirstApp/res/layout/main.xml
@@ -50,5 +50,15 @@
 		android:text="@string/prog_act_button_string"
 		android:onClick="go_to_prog_activity"
 	/>
-	
+
+    <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Draw Button"
+            android:id="@+id/draw_button"
+            android:layout_gravity="left|center_vertical"
+            android:singleLine="false"
+            android:onClick="on_draw_button"/>
+
 </LinearLayout>
