Drawing circles now steps through full white -> black as you add circles.

--- a/FirstApp/res/layout/draw_view.xml
+++ b/FirstApp/res/layout/draw_view.xml
@@ -6,9 +6,10 @@
 	<com.mycompany.firstapp.Draw_View 
 		android:id="@+id/draw_view"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="0dp"
+        android:layout_weight=".9"
 		/>
-	
+
 	<Button
 		android:id="@+id/draw_button"
 		android:layout_width="match_parent"
