--- a/FirstApp/res/layout/audio.xml
+++ b/FirstApp/res/layout/audio.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              >
+    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:columnCount="3"
-            android:rowCount="3"
+            android:layout_height="wrap_content"
+            android:columnCount="2"
+            android:rowCount="2"
             android:alignmentMode="alignBounds">
 
 
@@ -26,3 +30,36 @@
             android:layout_row="0"
             android:layout_column="1"/>
 </GridLayout>
+
+    <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Frequency"
+                android:id="@+id/textView"
+                android:singleLine="true"
+                android:textSize="16dp"
+                android:textIsSelectable="false"/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Medium Text"
+                android:id="@+id/freq_text"
+                android:singleLine="true"
+                android:textSize="16dp"/>
+
+    </LinearLayout>
+
+    <SeekBar
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/freq_seek_bar"
+            android:clickable="true"
+            android:focusableInTouchMode="false"/>
+
+</LinearLayout>
